Basic search page, updated menus, updated namespace page

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -26,6 +26,11 @@ h4 {
   color: #01445D;
 }
 
+a {
+  /* color: var(--slate-blue); */
+  color: #0359b6;
+}
+
 .btn-link {
   color: var(--slate-blue);
   padding-left: 0;
